[gd_scene load_steps=13 format=3 uid="uid://ybsasd5q2ohc"]

[ext_resource type="Script" uid="uid://b5td5bw73snin" path="res://Scripts/title.gd" id="1_yosvi"]
[ext_resource type="Texture2D" uid="uid://dqu40mo58mmt4" path="res://Resources/Textures/title.png" id="2_2qdx2"]
[ext_resource type="Texture2D" uid="uid://b5eg381vchlqm" path="res://Resources/Textures/Title_name.png" id="3_3eqdi"]
[ext_resource type="Texture2D" uid="uid://b8a2smvqg5xs5" path="res://Resources/Textures/Start.png" id="4_yu0ss"]
[ext_resource type="AudioStream" uid="uid://cwhalpvh3d2uq" path="res://Resources/Audio/Music/Field Day Loop.wav" id="5_6aagf"]
[ext_resource type="AudioStream" uid="uid://gigorrjxfmf2" path="res://Resources/Audio/SFX/Update Flashlight C.wav" id="6_2qdx2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kyk5u"]
atlas = ExtResource("4_yu0ss")
region = Rect2(4, 18, 1340, 307)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_cwqts"]
atlas = ExtResource("4_yu0ss")
region = Rect2(4, 348, 1340, 307)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_th2ad"]
atlas = ExtResource("4_yu0ss")
region = Rect2(4, 676, 1340, 307)
filter_clip = true

[sub_resource type="Animation" id="Animation_qh4d7"]
resource_name = "Idle"
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Start:texture_normal:region")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(4, 18, 1340, 307), Rect2(1389, 24, 1314, 290), Rect2(2737, 17, 1337, 291), Rect2(4, 18, 1340, 307), Rect2(1389, 24, 1314, 290), Rect2(2737, 17, 1337, 291)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Start:texture_pressed:region")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(4, 348, 1340, 307), Rect2(1389, 354, 1314, 290), Rect2(2737, 347, 1337, 291), Rect2(4, 348, 1340, 307), Rect2(1389, 354, 1314, 290), Rect2(2737, 347, 1337, 291)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Start:texture_hover:region")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(4, 676, 1340, 307), Rect2(1389, 682, 1314, 290), Rect2(2737, 675, 1337, 291), Rect2(4, 676, 1340, 307), Rect2(1389, 682, 1314, 290), Rect2(2737, 675, 1337, 291)]
}

[sub_resource type="Animation" id="Animation_lv7gn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Start:texture_normal:region")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(4, 18, 1340, 307)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Start:texture_pressed:region")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(4, 348, 1340, 307)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Start:texture_hover:region")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(4, 676, 1340, 307)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5vuho"]
_data = {
&"Idle": SubResource("Animation_qh4d7"),
&"RESET": SubResource("Animation_lv7gn")
}

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yosvi")
metadata/_edit_vertical_guides_ = [952.0]
metadata/_edit_horizontal_guides_ = [616.0]

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(952, 616)
texture = ExtResource("2_2qdx2")
hframes = 5
vframes = 3

[node name="TitleName" type="Sprite2D" parent="."]
position = Vector2(952, 616)
texture = ExtResource("3_3eqdi")

[node name="Start" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 279.0
offset_top = 462.0
offset_right = 1619.0
offset_bottom = 769.0
scale = Vector2(0.35, 0.35)
pivot_offset = Vector2(674.286, 154.286)
size_flags_horizontal = 4
texture_normal = SubResource("AtlasTexture_kyk5u")
texture_pressed = SubResource("AtlasTexture_cwqts")
texture_hover = SubResource("AtlasTexture_th2ad")
stretch_mode = 5

[node name="FieldDayLoop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_6aagf")
bus = &"Music"

[node name="UpdateFlashlightC" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_2qdx2")
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5vuho")
}
autoplay = "Idle"

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
